# PartStamp

./: Cargo.toml  Pipfile  setup.py
partstamp/: __main__.py  stl_tool.py
partstamp/gui/: gui_mode.py  main.ui
partstamp/ui/: main.ui
partstamp/utils/: logging_setup.py
src/: gui.rs  main.rs
