[package]
name = "partstamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.11" # For parsing cli
colog = "1.3.0"
log = "0.4.22"
simple-logging = "2.0.2"
simple_logger = "5.0.0"
# eframe = "0.28.1" # Drawing
stl_io = "0.7.0" # For dealing with STL files
